<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource">ezToll</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>

    <!-- Login/Register Screen -->
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="i_forgot_my_password">I Forgot My Password !</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="logo">logo</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="help">Help and Support</string>

    <!-- User Profile Screen -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="addressStreet">Street # and Name</string>
    <string name="addressCity">City</string>
    <string name="addressCountry">Country</string>
    <string name="addressPostalCode">Postal Code</string>
    <string name="submit">Submit</string>

    //settings screen
    <string name="option_settings">Settings</string>
    <string name="option_updateProfile">Update Profile</string>
    <string name="sp_track_cat_title">Tracking General Settings</string>
    <string name="sp_do_tracking_title">Enable Tracking </string>
    <string name="sp_do_tracking_summary">Turn on / off the tracking function</string>
    <string name="sp_do_tracking_enabled">Auto Tracking Enabled</string>
    <string name="sp_do_tracking_disabled">Auto Tracking Disabled</string>

    //user profile
    <string name="update_profile">Update Profile</string>
    <string name="payments">Payments</string>
    <string name="not_valid_card">Not Valid Card</string>
    <string name="validCard">Valid</string>
    <string name="thank_you_message">Thank you for your payment. It have been processed.</string>
    <string name="payment_confirmed">Payment Confirmed</string>
    <string name="pastPayments">All your payment information and receipts are stored on our secure servers. You can click the button below to view your past payements.</string>
    <string name="payment_history">Payment History</string>

    //user welcome
    <string name="welcome">Welcome</string>
    <string name="default_user_name">John Doe</string>
    <string name="outstanding_amount">You have an outstanding amount of $%1$.2f</string>
    <string name="proceed_to_payment">Proceed to payment</string>

    //payment
    <string name="total_due_label">Total Due</string>
    <string name="total_due_amount">$%1$.2f</string>
    <string name="total_due_loading">Loading…</string>

    //payment confirmed
    <string name="back_to_home">Back to the home screen</string>

    //payment history
    <string name="payment_history_title">Payment History</string>
    <string name="paid_date">Date</string>
    <string name="paid_amount">Paid Amount</string>

    //location service
    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>

    //track map
    <string name="btn_today">Today\'s route</string>
    <string name="btn_chosen_date">%1$d-%2$02d-%3$02d</string>
    <string name="btn_hide_toll_route">Hiding toll roads</string>
    <string name="btn_show_toll_route">Showing toll roads</string>
    <string name="msg_3_dots">…</string>
    <string name="msg_loading">Loading…</string>
    <string name="msg_no_route_info">No route info on the selected day</string>
    <string name="msg_no_route_info_today">No route info for you today</string>
    <string name="msg_mileages">Your payment amount is $%1$.2f for %2$.2f km</string>
    <string name="msg_can_refresh">Charges info not yet ready for this day. You can get the estimated amount using the calculate button below.</string>
    <string name="msg_est_charges">The estimated charges is $%1$.2f for %2$.2f km.</string>
    <string name="msg_est_charges_zero">You have no toll mileage up to this moment.</string>

    //notification bar
    <string name="outstanding_charges_message">Your have outstanding charges</string>
    <string name="auto_resume_message">Auto Tracking is automatically resumed</string>

    //links
    <string name="linktosite">
        <a href="https://www.docdroid.net/M07fJtt/eztoll-user-manual-pdf">Where can I get the user manual for ezToll?</a>
    </string>
    <string name="linktositedevices">
        <a href="https://iahmed851.wixsite.com/eztoll/post/design-a-beautiful-blog">What devices are supported?</a>
    </string>
    <string name="linktositeprivacy">
        <a href="https://iahmed851.wixsite.com/eztoll/post/grow-your-blog-community">Does EzToll value customers privacy?</a>
    </string>
    <string name="linktositerefund">
        <a href="https://iahmed851.wixsite.com/eztoll/post/how-to-get-a-refund">How to get a refund?</a>
    </string>

</resources>