<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentConfirmed">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="5"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="check"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_check_circle_24"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent"
                android:text="@string/payment_confirmed"
                android:textSize="40sp"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thank_you_message"
                android:textSize="25sp"
                android:textAlignment="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textAlignment="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pastPayments"
                android:textSize="15sp"
                android:textAlignment="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textAlignment="center"
                />
            <Button
                android:id="@+id/goToPaymentHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="@color/pinkColor"
                android:elevation="15dp"
                android:gravity="center"
                android:minHeight="48dp"
                android:text="@string/back_to_home"
                android:textAllCaps="false"
                android:textColor="@color/textColor"
                android:textSize="17sp"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        </LinearLayout>






    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>