<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".fragments.TrackMapFragment"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/major_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100"
        >
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="-61dp" />
        <LinearLayout
            android:id="@+id/btn_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            >
            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_choose_date"
                android:text="@string/btn_today"
                android:layout_weight="1"
                android:textSize="12sp"
                android:layout_margin="5dp"
                app:icon="@drawable/ic_baseline_calendar_month_24"
                app:iconGravity="textStart"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_toggle_toll_route"
                android:text="@string/btn_hide_toll_route"
                android:layout_weight="1"
                android:textSize="12sp"
                android:layout_margin="5dp"
                />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/bubbleMessageContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@drawable/ic_chat_bubble2"
            android:orientation="vertical"
            android:layout_weight="40"
            app:layout_constraintTop_toBottomOf="@+id/btn_bar"
            >

            <TextView
                android:id="@+id/txt_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/msg_no_route_info"
                android:textSize="18sp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                />
            <TextView
                android:id="@+id/txt_message_hidden"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/msg_3_dots"
                android:textSize="18sp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:visibility="gone"
                />

        </RelativeLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_baseline_calculate_24"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>