<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInformation">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">



        <androidx.cardview.widget.CardView
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="38dp"
            android:layout_marginEnd="38dp"
            app:cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:id="@+id/userProfileSettings"
                    android:background="@color/white"
                    android:padding="25dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Your Information"
                        android:textSize="20sp"
                        android:paddingBottom="10sp"/>


                    <com.google.android.material.textfield.TextInputLayout
                        android:hint="@string/first_name"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        app:shapeAppearanceOverlay="@style/Button4"
                        app:boxStrokeWidth="1dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fistName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textEmailAddress"
                            android:minHeight="48dp"
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            android:textStyle="normal"
                            tools:ignore="TextContrastCheck" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:hint="@string/last_name"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        app:shapeAppearanceOverlay="@style/Button4"
                        app:boxStrokeWidth="1dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/lastName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:minHeight="48dp"
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            android:textStyle="normal"
                            tools:ignore="TextContrastCheck" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:hint="@string/gender"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        app:shapeAppearanceOverlay="@style/Button4"
                        app:boxStrokeWidth="1dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/gender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:minHeight="48dp"
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            android:textStyle="normal"
                            tools:ignore="TextContrastCheck" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:hint="@string/addressStreet"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        app:shapeAppearanceOverlay="@style/Button4"
                        app:boxStrokeWidth="1dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/addressStreet"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:minHeight="48dp"
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            android:textStyle="normal"
                            tools:ignore="TextContrastCheck" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:hint="@string/addressCountry"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        app:shapeAppearanceOverlay="@style/Button4"
                        app:boxStrokeWidth="1dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/addressCountry"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:minHeight="48dp"
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            android:textStyle="normal"
                            tools:ignore="TextContrastCheck" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:hint="@string/addressCity"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        app:shapeAppearanceOverlay="@style/Button4"
                        app:boxStrokeWidth="1dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/addressCity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:minHeight="48dp"
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            android:textStyle="normal"
                            tools:ignore="TextContrastCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:hint="@string/addressPostalCode"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        app:shapeAppearanceOverlay="@style/Button4"
                        app:boxStrokeWidth="1dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/addressPostalCode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:minHeight="48dp"
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            android:textStyle="normal"
                            tools:ignore="TextContrastCheck" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/pinkColor"
            android:elevation="15dp"
            android:gravity="center"
            android:minHeight="48dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            android:textSize="17sp"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>



</LinearLayout>